--- a/src/styles/FormStyle.css
+++ b/src/styles/FormStyle.css
@@ -3,42 +3,52 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-
 .SearchFormSection { 
   background-repeat: no-repeat;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 30% auto;
+  margin-top:30%;
   width: 1000px;
-  height: 600px;
+  height: 550px;
+  max-width: 100%;
   text-align: center;
-  display: flex;
   color: white;
-  box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, .5);
+  background-color: rgba(20, 40, 40, .8);
+	border-radius: 10px;
+	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+	display: flex;
+	margin: 20px;
+	overflow: hidden;
 }
 
 .Addformsection {
+
   background-repeat: no-repeat;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 30% auto;
+  margin-top:30%;
   width: 1000px;
   height: 700px;
+  max-width: 100%;
   text-align: center;
-  display: flex;
   color: white;
-  box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, .5);
+  background-color: rgba(20, 40, 40, .8);
+	border-radius: 10px;
+	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+	display: flex;
+	margin: 20px;
+	overflow: hidden;
 
+	
 }
 
 .info {
-  width: 45%;
-  background: rgba(20, 20, 20, .8);
-  padding: 30px 0;
-  border-right: 5px solid rgba(30, 30, 30, .8);
+
+  background-color: rgba(20, 20, 20, .8);
+	color: #fff;
+	padding: 30px;
+	max-width: 250px;
+
 }
+
 .info h2 {
     padding-top: 30px;
     font-weight: 1500;
@@ -48,17 +58,18 @@
     normal; margin-bottom: 0px; 
     margin-top: 40px; text-align: center; 
     text-shadow: 0 1px 1px #fff;
-  }
-  .info p {
+}
+  
+.info p {
     font-size: 18px;
     margin-top: -20px;
-  }
+}
 
 .AddForm{
   width: 80%;
-  height: 650px;
+  height: 700px;
   padding: 30px 0;
-  margin-top: 20px;
+  margin-top: 1px;
   background: rgba(20, 40, 40, .8);
 
 
@@ -66,50 +77,55 @@
 
 .SearchForm {
   width: 80%;
-  height: 550px;
+  height: 700px;
   padding: 30px 0;
-  margin-top: 20px;
+  margin-top: 1px;
   background: rgba(20, 40, 40, .8);
   
  
+
 }
+
 .signupForm h2 {
     font-weight: 300;
-  }
+}
 
 .inputFields {
-  margin: 15px 0;
-  font-size: 16px;
-  padding: 10px;
-  width: 250px;
-  border: 1px solid rgba(10, 180, 180, 1);
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  background: rgba(20, 20, 20, .2);
-  color: white;
-  outline: none;
+    margin: 15px 0;
+    font-size: 16px;
+    padding: 10px;
+    width: 250px;
+    border: 1px solid rgba(10, 180, 180, 1);
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: rgba(20, 20, 20, .2);
+    color: white;
+    outline: none;
 }
 
 .noBullet {
-  list-style-type: none;
-  padding: 0;
+    list-style-type: none;
+    padding: 0;
 }
 
+
+
+
 #join-btn {
-  border: 1px solid rgba(10, 180, 180, 1);
-  background: rgba(20, 20, 20, .6);
-  font-size: 18px;
-  color: white;
-  margin-top: 12px;
-  padding: 10px 50px;
-  cursor: pointer;
-  transition: .4s;
- 
+    border: 1px solid rgba(10, 180, 180, 1);
+    background: rgba(20, 20, 20, .6);
+    font-size: 18px;
+    color: white;
+    margin-top: 12px;
+    padding: 10px 50px;
+    cursor: pointer;
+    transition: .4s;
 }
+
+
 
 #join-btn:hover {
     background: rgba(20, 20, 20, .8);
     padding: 10px 80px;
-  }
-
+}
